[GTK] Memory leak in webkit_web_view_init https://bugs.webkit.org/show_bug.cgi?id=87943

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-05-31
Reviewed by Martin Robinson.

Fixed a memory leak in webkit_web_view_init by making the
UserMediaClientGtk to be owned by the WebView.

* webkit/webkitwebview.cpp:
(webkit_web_view_init):
* webkit/webkitwebviewprivate.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@119118 bbb929c8-8fbe-4397-9dbb-9b2b20218538