third_party/WebKit/Source/WebKit/gtk/webkit/webkitwebview.cpp
@@ -120,10 +120,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "DeviceOrientationClientGtk.h"
 #endif
 
-#if ENABLE(MEDIA_STREAM)
-#include "UserMediaClientGtk.h"
-#endif
-
 /**
  * SECTION:webkitwebview
  * @short_description: The central class of the WebKitGTK+ API
@@ -3556,7 +3552,8 @@ static void webkit_web_view_init(WebKitWebView* webView)
 #endif
 
 #if ENABLE(MEDIA_STREAM)
-    WebCore::provideUserMediaTo(priv->corePage, new UserMediaClientGtk);
+    priv->userMediaClient = adoptPtr(new UserMediaClientGtk);
+    WebCore::provideUserMediaTo(priv->corePage, priv->userMediaClient.get());
 #endif
 
     if (DumpRenderTreeSupportGtk::dumpRenderTreeModeEnabled()) {
