third_party/WebKit/Source/WebKit/gtk/webkit/webkitwebviewprivate.h
@@ -35,6 +35,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <webkit/webkitwebview.h>
 #include <wtf/gobject/GOwnPtr.h>
 
+#if ENABLE(MEDIA_STREAM)
+#include "UserMediaClientGtk.h"
+#endif
+
 namespace WebKit {
 WebCore::Page* core(WebKitWebView*);
 WebKitWebView* kit(WebCore::Page*);
@@ -104,6 +108,10 @@ struct _WebKitWebViewPrivate {
 
 #if ENABLE(ICONDATABASE)
     gulong iconLoadedHandler;
+#endif
+
+#if ENABLE(MEDIA_STREAM)
+    OwnPtr<WebKit::UserMediaClientGtk> userMediaClient;
 #endif
 };
 
